<resources>
    <string name="app_name">Spongebob FANSPAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">33Th</string>
    <string name="interest">I love everyone</string>
    <string name="name">Spongebob Squarepants</string>
    <string name="sinopsys">Sinopsys</string>
    <string name="description">SpongeBob is a childish and joyful sea sponge who lives in a pineapple with his pet snail Gary in the underwater city of Bikini Bottom.
        He works as a fry cook at the Krusty Krab, a job which he is exceptionally skilled at and enjoys a lot.
        He attends Mrs. Puffs Boating School, though he has yet to receive a drivers license due to his inability to drive a boatmobile properly.
        SpongeBob is very good-natured and loves to hang out with his best friend Patrick.
        His teacher is Mrs. Puff and his boss is Mr. Krabs. </string>
    <string name="likecount">53K</string>
    <string name="sharecount">30K</string>
    <string name="viewcount">681K</string>
    <string name="zonk">TICKET SOLD OUT</string>

    <string name="formal">Hi, My Name is Spongebob</string>
    <string name="interests">Interest: I love everyone</string>
    <string name="address">Address : 124 Conch Street Bikini Bottom Pacific Ocean </string>
    <string name="description2">A square yellow sponge named SpongeBob SquarePants lives in a pineapple with his pet snail, Gary, in the city of Bikini Bottom on the floor of the Pacific Ocean.
        He works as a fry cook at the Krusty Krab. During his time off, SpongeBob has a knack for attracting trouble with his starfish best friend,
        Patrick. Arrogant octopus Squidward Tentacles, SpongeBob’s neighbor, dislikes SpongeBob because of his childlike behavior.</string>
</resources>
